--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title: Poole
-tagline: The Jekyll Butler
-url: https://getpoole.com
+title: Lunar Systematics
+tagline: Research, Journalism, and Data Analytics
+url: http://lunarsystematics.com
 paginate: 1
 baseurl: ""
 permalink: pretty
