--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,7 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Mark Otto
-  url: https://twitter.com/mdo
-  email: markdotto@gmail.com
+  name: Christof Rindlisbacher
 
 # Custom vars
 version: 3.0.0
